# hybrid

./: .gitignore  Numba tests.ipynb  README.md  RoundingWoes.ipynb  Run hybrid simulation.ipynb  SBML_tests.ipynb  Test cases.ipynb  TestWorkshop.ipynb  clustertest.py  hybrid.py  pyproject.toml  reactions.py  simulators.py  test.py  unit_tests.py  virusdynamics.ipynb
hybrid/: _factories.py  eulermaruyama.py  gillespie.py  hybrid.py  model.py  parse.py  parseconfig.py  simulate.py  simulator.py  simulators.py  tau.py  util.py
hybrid/simulators/: hr_original.yaml  hybrid_n.yaml  hybrid_n_cle_contrived.yaml  hybrid_n_contrived.yaml  hybrid_n_halt.yaml  tau_explicit_corrected.yaml  tau_implicit.yaml
notebooks/: HookGillespie.ipynb  HybridBurstyVirions.ipynb  HybridNoVirions.ipynb  Numba tests.ipynb  Run hybrid simulation.ipynb  SBML_tests.ipynb  Test cases.ipynb  Tutorial.ipynb  VirusDynamics.ipynb
notebooks/hook_abr/: high_endogenous  high_endogenous_parameters.yaml  hook_abr.yaml  no_col_res.yaml
scripts/: tautest.py  tautest_dd.py
tests/: CriticalEmergence.ipynb  HillTimeDependence.ipynb  LinearTimeDependence.ipynb  PartitionClinging.ipynb  README.md  SimpleNotebook.ipynb  TestAnalysis.ipynb  birthdeathtests.py  clustertest.py  discover.py  discover_tests.py  filesystem_test.py  frameworktests.py  sbml_tests.py  simple_cases.ipynb  submit.py  submit.sh  submit_sbml.py  submit_sbml.sh  suites.py  unit_tests.py
tests/hybrid/: DecayingIsomerization.ipynb  LacZLacY.ipynb  Schlogl.ipynb  run_hybrid.py
tests/hybrid/laczlacy/: initial.yaml  model.yaml  parameters.yaml  t.yaml
tests/hybrid/schlogl/: SchloglWithBackground.ipynb  model.yaml  parameters.yaml  t.yaml
tests/hybridtests/: DecayingDimerizaton.ipynb  DecayingIsomerization.ipynb
tests/sbml/: clustertest.py  sbml_tests.py  submit_sbml.py  submit_sbml.sh
tests/sbml-tests/sbml-00001-birth-death/: model.txt
tests/sbml-tests/sbml-001-birth-death/: config.yaml  model.yaml
tests/sbml-tests/sbml-002-immigration-death/: model.txt
tests/sbml-tests/sbml-003-dimerisation/: config.txt  model.txt  model.yaml  partition.json
tests/sbml-tests/sbml-004-batch-immigration/: config.txt  config.yaml  model.txt  (+1 more)
tests/simulators/: gillespie.yaml  hybrid_n_approx_contrived.yaml
tests/time-dependent/: run_time_dependent.py  simple.ipynb
tests/time_dependent/: simple.ipynb
(+714 files in other folders)
