[tool.poetry]
name = "hybrid-algorithm-scratch"
version = "0.1.0"
description = ""
authors = ["Thayer Anderson <tanderson11@gmail.com>"]
readme = "README.md"
packages = [{include = "hybrid_algorithm_scratch"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24"
jupyter = "^1.0.0"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
matlabengine = "^9.14.3"
numba = "^0.57.1"
flameprof = "^0.4"
flameplot = "^1.1.0"
jupyterflame = { git = "https://github.com/H4dr1en/jupyterflame.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
