[tool.poetry]
name = "hybrid"
version = "0.1.0"
description = ""
authors = ["Thayer Anderson <tanderson11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24"
jupyter = "^1.0.0"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
matlabengine = "^9.14.3"
numba = "^0.58.1"
flameprof = "^0.4"
flameplot = "^1.1.0"
jupyterflame = { git = "https://github.com/H4dr1en/jupyterflame.git" }
reactionmodel = { git = "https://github.com/tanderson11/reactionmodel.git" }
statsmodels = "^0.14.1"
pathlib = "^1.0.1"

[tool.poetry.group.extras.dependencies]
simpleeval = "^0.9.13"


[tool.poetry.group.dev.dependencies]
importlib = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
