[tool.poetry]
name = "hybrid"
version = "0.1.0"
description = ""
authors = ["Thayer Anderson <tanderson11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = {path = "numpy-1.26.4-cp39-cp39-macosx_11_0_arm64.whl"}
scipy = { file = "/Users/thayer/develop/hybrid/scipy-1.13.0.dev0-cp39-cp39-macosx_12_0_arm64.whl" }
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
numba = "^0.58.1"
reactionmodel = { git = "https://github.com/tanderson11/reactionmodel.git" }
statsmodels = "^0.14.1"
pathlib = "^1.0.1"

[tool.poetry.group.extras.dependencies]
matlabengine = "^9.14.3"

[tool.poetry.group.dev.dependencies]
importlib = "^1.0.4"
flameprof = "^0.4"
flameplot = "^1.1.0"
parameterized = "^0.9.0"
jupyterflame = { git = "https://github.com/H4dr1en/jupyterflame.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
